# vbrecomp

./: .gitignore  BOOTSTATUS.md  CMakeLists.txt  COMPATIBILITY.md  LICENSE  README.md  STATUS.md
.claude/: settings.local.json
docs/: ARCHITECTURE.md  RECOMPILER.md
games/: CMakeLists.txt
games/driver/: main.c
games/galacticpinball/: Galactic Pinball (Japan, USA).hints.txt  README.md
games/galacticpinball/src/: main.c
games/mariotennis/: README.md  mariotennis.hints
games/mariotennis/src/: main.c
games/redalarm/: README.md  redalarm.hints
games/redalarm/src/: main.c
include/vbrecomp/: cpu.h  gamepad.h  interrupt.h  mem.h  platform.h  timer.h  types.h  vbrecomp.h  vip.h  vsu.h
scripts/: build_all.ps1  extract_roms.ps1  gen_compat.ps1  ghidra_xval.ps1  hot_survey.ps1  probe_render.ps1  render_survey.ps1  sweep.ps1
scripts/ghidra/: export_functions.py  seed_entry.py
src/: cpu.c  gamepad.c  interrupt.c  mem.c  menu.cpp  menu.h  platform_sdl2.c  screenshot.c  screenshot.h  stb_impl.c  timer.c  vbrecomp.c  vip.c  vsu.c
tests/: test_mem.c
tools/v810recomp/: analyze.c  decode.c  emit.c  main.c  v810recomp.h
